--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "git+https://github.com/crimx/webextensions-emulator.git"
   },
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --host 0.0.0.0  --watch-poll --mode=development",
-    "build": "NODE_ENV=production webpack"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --watch-poll --mode=development",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [
     "webextension",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/crimx/webextensions-emulator#readme",
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
