--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webextensions-emulator",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Functional fake WebExtensions environment for development.",
   "repository": {
     "type": "git",
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --watch-poll --mode=development",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack --mode=production"
   },
   "keywords": [
     "webextension",
